--- a/Css/design.css
+++ b/Css/design.css
@@ -10,29 +10,18 @@ img {
     padding: 0.1em;
     width: 18.75em;
   }
-section{
-    letter-spacing: 0.1em;
-    margin-left: 0.25em;
-    margin-right: 0.25em;
-    padding: 0.25em; 
-}
+
 p{
     text-align: justify;
-    letter-spacing: 0.1em;
 }
 h1{
-    text-align: center;
-    letter-spacing: 0.5em;
+    text-align: center
 }
 #titre_central{
     display: block;
     margin-right: auto;
     margin-left: auto;
     font-weight: bold;
-}
-ol > li{
-    letter-spacing: 0.2em;
-    word-spacing: 0.1em;
 }
 #def1{
     text-align: center;
